# facturacionArquitecturas

./: README.md
Arquitecturas-Avanzadas-Evergreen-Fin/: README.md
Arquitecturas-Avanzadas-Evergreen-Fin/apps/facturacion_back/: memory:  memory:-shm  memory:-wal  pyproject.toml
Arquitecturas-Avanzadas-Evergreen-Fin/apps/facturacion_back/facturacion_back/: __init__.py  main.py
Arquitecturas-Avanzadas-Evergreen-Fin/apps/facturacion_back/facturacion_back/models/: Transaccion.py  TransaccionType.py  __init__.py
Arquitecturas-Avanzadas-Evergreen-Fin/apps/facturacion_back/facturacion_back/models/mixins/: AuditMixin.py
Arquitecturas-Avanzadas-Evergreen-Fin/apps/facturacion_back/facturacion_back/routers/: TransaccionRouter.py
Front_create_transaction/: crearTransacciones.py
Front_create_transaction/templates/: crearTransaccion.html  template.html
Front_view_transactions/: listarTransacciones.py
Front_view_transactions/templates/: transacciones.html
